--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">RxDemo</string>
-    <string name="AutoComplete">Auto Completion :</string>
+    <string name="AutoComplete">Echtzeitsuche:</string>
 </resources>
